# audit-repo-cloner

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.1repo.json.example  config.2repo.json.example  config.gitlab.json.example  config.json.example  config.mixed.json.example  pyproject.toml  requirements.txt  run_repo_cloner  setup.py
.github/workflows/: pypi-release.yml  tests.yml
audit_repo_cloner/: __init__.py  __main__.py  __version__.py  constants.py  copy_issue_template.py  create_action.py  create_audit_repo.py  create_secret.py  github_project_utils.py  replace_labels.py  source_utils.py
audit_repo_cloner/templates/: lint-audit-issues.yml
tests/: README.md  cleanup_test_repos.py  test_create_audit_repo.py  test_source_utils.py
tests/integration/: __init__.py  conftest.py  test_github_actions_removal.py  test_github_integration.py  test_remove_github_actions_function.py  test_utils.py
tests/test_data/: sample_yaml.yaml
