[project]
name = "audit_repo_cloner"
version = "0.2.2"
description = "Python CLI for cloning a repo and preparing it for audit report generation."
readme = "README.md"
license = "MIT"
authors = [{ name = "Cyfrin" }]
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "certifi>=2022.12.7",
    "cffi>=1.15.1",
    "charset-normalizer>=3.1.0",
    "click>=8.1.3",
    "cryptography>=40.0.2",
    "Deprecated>=1.2.13",
    "gql>=3.5.0",
    "idna>=3.4",
    "packaging>=23.1",
    "pyasn1>=0.5.0",
    "pycparser>=2.21",
    "PyGithub>=1.58.1",
    "PyJWT>=2.6.0",
    "PyNaCl>=1.5.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "requests>=2.29.0",
    "requests-toolbelt>=1.0.0",
    "rsa>=4.9",
    "urllib3>=1.26.15",
    "wrapt>=1.15.0",
]

[project.urls]
Homepage = "https://github.com/Cyfrin/audit-repo-cloner"
Repository = "https://github.com/Cyfrin/audit-repo-cloner"

[project.scripts]
audit_repo_cloner = "audit_repo_cloner:create_audit_repo"

[dependency-groups]
dev = [
    "pre-commit>=3.2.0",
    "autoflake>=1.4",
    "isort>=5.12.0",
    "black>=22.3.0",
    "flake8>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
